--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,24 @@
 
 	<script type="text/javascript" src="lib/impact/impact.js"></script>
 	<script type="text/javascript" src="lib/game/main.js"></script>
+  <script src="/socket.io/socket.io.js"></script>
+<!--   <script src="/socket.io-stream.js"></script> -->
+  
+  <script>
+  var socket = io ();  
+  socket.on('connection', function (data) {
+    console.log('connection');
+  
+  }); 
+    socket.on('chat',function(direction,speed){
+      console.log('direction is '+direction);
+      console.log('speed = '+speed);
+//       directionSet.push(da);
+//       speedSet.push(ta);
+//       console.log('set of direction is '+directionSet);
+//       console.log('set of speed is '+speedSet);
+  });
+  </script>
 </head>
 <body>
 	<canvas id="canvas"></canvas>
