--- a/public/index.html
+++ b/public/index.html
@@ -33,13 +33,14 @@
     console.log('connection');
   
   }); 
-    socket.on('chat',function(direction,speed){
-      console.log('direction is '+direction);
-      console.log('speed = '+speed);
-//       directionSet.push(da);
-//       speedSet.push(ta);
-//       console.log('set of direction is '+directionSet);
-//       console.log('set of speed is '+speedSet);
+    socket.on('chat',function(direction,speed,startgame,turn,name,character){
+      console.log('direction is '+direction)
+      console.log('speed = '+speed)
+      console.log('status is '+ startgame)
+      console.log('turn ' + turn)
+      console.log('name is ' + name)
+      console.log('actor is '+character)
+      console.log('********************')
   });
   </script>
 </head>
