--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
               console.log('******************************')
       });
 
-      socket.on('controlgram',function(startgame_socket,character_socket,play_socket,ansQ2_socket,state_socket,reset_socket){
+      socket.on('controlgame',function(startgame_socket,character_socket,play_socket,ansQ2_socket,state_socket,reset_socket){
               if(character_socket != null ){
                 console.log('actor is ',character_socket);
               } 
