--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,7 @@
               console.log('inser_fl ',insert_fl);
               console.log('modify_fl ',modify_fl);
               console.log('number ',number_ch)
+              console.log('position insert ',)
               console.log('******************************');
       });
 
